# Project_Resume

./: .gitignore  Makefile  pyproject.toml
configs/: data_sources.yaml  risk.yaml
configs/configs/: strategy.yaml  universe.yaml
src/arkea_quant/data/: __init__.py  loader.py
src/arkea_quant/utils/: __init__.py  config.py
