[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkea-quant"
version = "0.1.0"
description = "Systematic Trend & Thematic Equity Portfolio with Volatility Scaling, Risk Overlay, Sector Rotation, Factor Combination, and Regime Detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arkéa Quant Research" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "yfinance>=0.2.36",
    "pyarrow>=14.0",          # parquet I/O
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "jinja2>=3.1",            # HTML tearsheet
    "rich>=13.0",             # CLI pretty-printing
    "click>=8.1",             # CLI framework
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pandas-stubs>=2.1",
]

[project.scripts]
arkea = "arkea_quant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arkea_quant" = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff (linter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "C4", "PT"]
ignore = ["B008"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
